Makes mobile nav opacity transition last longer and fixes animation delay issue so all of the spring is visible

--- a/web/app/themes/Stardust/assets/styles/_global.scss
+++ b/web/app/themes/Stardust/assets/styles/_global.scss
@@ -100,16 +100,11 @@ p {
     z-index: -1;
     top: 0;
     height: 100vh;
-    background: white;
+    background: $brand;
     transition: top 200ms cubic-bezier(0.65, 0.05, 0.36, 1);
     left: 0;
     right: 0;
   }
-}
-
-.nav-visible {
-  top: 0;
-  background-color: $brand;
 }
 
 .mobile-nav-touchable {
@@ -145,7 +140,7 @@ p {
   opacity: 1;
   animation: spring;
   animation-duration: 0.92s;
-  animation-delay: 200ms;
+  // animation-delay: 1200ms;
   animation-timing-function: cubic-bezier(0.445,  0.050, 0.550, 0.950);
 }
 
@@ -160,8 +155,14 @@ p {
 .menu-item {
   padding-top: 16px;
   padding-bottom: 16px;
-  transition: opacity 100ms;
-  transition-delay: 200ms;
+  transition: opacity 200ms;
+  
+  &:nth-child(1) { transition-delay: 0ms }
+  &:nth-child(2) { transition-delay: 40ms }
+  &:nth-child(3) { transition-delay: 80ms }
+  &:nth-child(4) { transition-delay: 120ms }
+  &:nth-child(5) { transition-delay: 160ms }
+  &:nth-child(6) { transition-delay: 200ms }
   
   @media screen and (max-width: 640px) {
     opacity: 0;
